[package]
name = "igdbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
lazy_static = "1.4.0"
once_cell = "1.14.0"
reqwest = { version = "0.11", features = [ "json", "blocking" ] }
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
schemars = { version = "0.8.10", features = [ "chrono" ] }
sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = "1.0.144"
serde_bytes = "0.11.7"
serde_json = "1.0.85"
serde_path_to_error = "0.1"
tokio = "1.21.1"
thiserror = "1.0.34"
url = "2.3.1"
log = "0.4.17"
env_logger = "0.9.1"
