[package]
name = "igdbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
config = "0.13.3"
lazy_static = "1.4.0"
once_cell = "1.14.0"
reqwest = { version = "0.11", features = [ "json", "blocking" ] }
schemars = { version = "0.8.10", features = [ "chrono" ] }
sea-orm = { version = "0.12.2", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
serde = "1.0.144"
serde_json = "1.0.85"
serde_path_to_error = "0.1"
tokio = "1.21.1"
thiserror = "1.0.34"
url = "2.3.1"

shared = { path = "../shared" }
axum = "0.6.18"
axum-macros = "0.3.7"
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.1", features = ["cors", "trace"] }
hyper = "0.14.27"
